--- a/pipeline/pyproject.toml
+++ b/pipeline/pyproject.toml
@@ -1,12 +1,11 @@
 [project]
-name = "data_dagster_project"
+name = "pipeline"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9,<3.13"
 dependencies = [
-    "dagster",
-    "dagster-cloud",
+    "dagster", "confluent-kafka", "python-dotenv", "dagit", "requests"
 ]
 
 [project.optional-dependencies]
@@ -20,8 +19,8 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [tool.dagster]
-module_name = "data_dagster_project.definitions"
-code_location_name = "data_dagster_project"
+module_name = "src.definitions"
+code_location_name = "src"
 
 [tool.setuptools.packages.find]
-exclude=["data_dagster_project_tests"]
+exclude=["storage", "logs"]
