--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,8 @@
 /hadoop/hadoop_namenode
 /dagster/venv
 /dagster/build
-/__pycache__
+**/__pycache__/
+**/venv/
+**/.venv/
+**/*.egg-info/
+**/build/
