--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "29092:9092"
     environment:
       KAFKA_NODE_ID: 1
+      KAFKA_CLUSTER_ID: "1qWuvkKzQd6kRvirOjNEMQ"
       KAFKA_PROCESS_ROLES: broker,controller
       KAFKA_LISTENERS: "PLAINTEXT://broker-1:19092,PLAINTEXT_HOST://broker-1:9092, CONTROLLER://broker-1:9093"
       KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://broker-1:19092,PLAINTEXT_HOST://localhost:29092"
@@ -23,6 +24,7 @@ services:
       - "39092:9092"
     environment:
       KAFKA_NODE_ID: 2
+      KAFKA_CLUSTER_ID: "1qWuvkKzQd6kRvirOjNEMQ"
       KAFKA_PROCESS_ROLES: broker, controller
       KAFKA_LISTENERS: "PLAINTEXT://broker-2:19092,PLAINTEXT_HOST://broker-2:9092, CONTROLLER://broker-2:9093"
       KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://broker-2:19092,PLAINTEXT_HOST://localhost:39092"
@@ -40,6 +42,7 @@ services:
       - "49092:9092"
     environment:
       KAFKA_NODE_ID: 3
+      KAFKA_CLUSTER_ID: "1qWuvkKzQd6kRvirOjNEMQ"
       KAFKA_PROCESS_ROLES: broker,controller
       KAFKA_LISTENERS: "PLAINTEXT://broker-3:19092,PLAINTEXT_HOST://broker-3:9092,CONTROLLER://broker-3:9093"
       KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://broker-3:19092,PLAINTEXT_HOST://localhost:49092"
@@ -71,6 +74,27 @@ services:
       KSQL_LOG4J_OPTS: "-Dlog4j.configuration=file:/etc/ksqldb/log4j.properties"
       KSQL_OPTS: "-Dconfluent.support.metrics.enable=false"
 
+  ksql-init:
+    image: curlimages/curl:latest
+    container_name: ksql-init
+    depends_on:
+      - ksqldb
+      - topic-creator
+    volumes:
+      - ./streaming/submit-ksql.sh:/submit-ksql.sh
+      - ./streaming/init.sql:/home/curl_user/init.sql
+    entrypoint: ["sh", "/submit-ksql.sh"]
+
+  topic-creator:
+    image: apache/kafka:4.0.0
+    container_name: topic-creator
+    depends_on:
+      - broker-1
+      - broker-2
+      - broker-3
+    volumes:
+      - ./entrypoint.sh:/entrypoint.sh
+    entrypoint: ["/bin/bash", "/entrypoint.sh"]
 
   namenode:
     image: apache/hadoop:3.4.1
